--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "chemical_charts"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 plotly = "^5.14.1"
+ipywidgets = "^8.0.6"
 
 
 [build-system]
