--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "chemical_charts"}]
 python = "^3.10"
 plotly = "^5.14.1"
 ipywidgets = "^8.0.6"
+numpy = "^1.24.3"
 
 
 [build-system]
