--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scikit-image = "^0.20.0"
 nbformat = "^5.8.0"
 kaleido = "0.2.1"
 pycalphad = "^0.10.2"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
