--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ nbformat = "^5.8.0"
 kaleido = "0.2.1"
 pycalphad = "^0.10.2"
 python-dotenv = "^1.0.0"
+opencv-python = "^4.7.0.72"
+cairosvg = "^2.7.0"
 
 
 [build-system]
